# news-ticker

./: Cargo.toml  README.md  feeds.txt
.github/workflows/: ci.yml
src/: db.rs  feed.rs  lib.rs  main.rs
tests/: db_test.rs  feed_test.rs
